
SET(CMAKE_INSTALL_RPATH_USE_LINK_PATH TRUE)

INCLUDE_DIRECTORIES(
  ${CMAKE_CURRENT_SOURCE_DIR}/Utility
  ${CMAKE_CURRENT_SOURCE_DIR}/Config
  ${CMAKE_CURRENT_SOURCE_DIR}/Input
  ${CMAKE_CURRENT_SOURCE_DIR}/Resources
  ${CMAKE_CURRENT_SOURCE_DIR}/Models
  )

ADD_SUBDIRECTORY(Utility)
ADD_SUBDIRECTORY(Input)
ADD_SUBDIRECTORY(Resources)
ADD_SUBDIRECTORY(Config)
ADD_SUBDIRECTORY(Models)
ADD_LIBRARY(cycluscore ${CYCLUS_CORE_SRC})

SET_TARGET_PROPERTIES( cycluscore 
  PROPERTIES 
  INSTALL_NAME_DIR "${CMAKE_INSTALL_PREFIX}/cyclus/lib"
  INSTALL_RPATH "${CMAKE_INSTALL_PREFIX}/cyclus/lib"
  )

INSTALL(TARGETS cycluscore
  LIBRARY DESTINATION cyclus/lib
  COMPONENT cycluscore
  )

SET( TestSource ${TestSource} PARENT_SCOPE )


SET(CYCLUS_CORE_SRC ${CYCLUS_CORE_SRC} PARENT_SCOPE)
target_link_libraries(cycluscore dl ${Boost_FILESYSTEM_LIBRARY} 
  ${SQLITE3_LIBRARIES} ${LIBXML2_LIBRARIES})
